fixed project section arrow

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+            <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
         </section>
         <section id="contact">
             <p class="section_text_p1">Get in Touch</p>
