--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     </div>
                 </div>
             </div>
+            <!-- I thought I fixed this part  -->
             <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
         </section>
         <section id="contact">
