--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
         <section id="profile">
             <div class="section_pic-container">
-                <img src="./assets/profile-picture.jpg" alt="Francesca Venditti profile picture" />
+                <img src="./assets/profile-picture.jpg" alt="Francesca Venditti profile picture" id="profile_pic" />
             </div>
             <div class="section_text">
                 <p class="section_text_p1">Hello, I'm</p>
@@ -167,7 +167,7 @@
             <div class="experience-details-container">
                 <div class="about-containers"><div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project1.png" alt="project 1" class="project-pic" />
+                        <img src="./assets/project1.png" alt="project 1" class="project-pic" id="project_1_pic"/>
                     </div>
                     <h2 class="experience-subtitle project-title">Project One</h2>
                     <div class="btn-container">
@@ -178,7 +178,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project2.png" alt="project 2" class="project-pic" />
+                        <img src="./assets/project2.png" alt="project 2" class="project-pic" id="project_2_pic"/>
                     </div>
                     <h2 class="experience-subtitle project-title">Project Two</h2>
                     <div class="btn-container">
@@ -189,7 +189,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project3.png" alt="project 3" class="project-pic" />
+                        <img src="./assets/project3.png" alt="project 3" class="project-pic" id="project_3_pic"/>
                     </div>
                     <h2 class="experience-subtitle project-title">Project Three</h2>
                     <div class="btn-container">
@@ -198,7 +198,6 @@
                     </div>
                 </div>
             </div>
-            <!-- I thought I fixed this part  -->
             <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
         </section>
         <section id="contact">
