--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
                     <p><a href="https://www.linkedin.com/in/francesca-venditti-2a268627a/">LinkedIn</a></p>
                     
                 </div>
+                <div class="contact-info-container">
+                    <img src="./assets/education.png" alt="education icon" class="icon contact-icon" />
+                    <p><a href="mailto:fnv@mit.edu">MIT Student Email</a></p>
+                </div>
         </section>
         <footer>
             <nav>
