Added a languages section to about me

--- a/index.html
+++ b/index.html
@@ -75,14 +75,20 @@
                         <div class="details-container">
                             <img src="./assets/education.png" alt="education icon" class="icon" />
                             <h3>Education</h3>
-                            <p>B.S. at MIT</p>
+                            <p>B.S. in Computer Science & Engineering at MIT (Class of 2026)</p>
                         </div>
+                        <div class="details-container">
+                            <img src="./assets/languages.png" alt="languages icon" class="icon" />
+                            <h3>Languages</h3>
+                            <p>English<br>Native</br></p>
+                            <p>Spanish<br>Proficient</br></p>
+                            <p>Mandarin Chinese<br>Beginner</br></p>
+                        </div>
+
                     </div>
                     <div class="text-container">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut
-                            purus eget sapien. Nullam nec purus nec nisl lacinia lacinia. Donec
-                            nec nisl lacinia, lacinia nisl nec, lacinia nisl.
+                            I'm a rising 3rd year student at MIT where I major in course 6-3 and minor in biology (course 7). I love to code and am passionate about using technology to solve real-world problems. I'm currently a 
                         </p>
                     </div>
                 </div>
