--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="section_text">
                 <p class="section_text_p1">Hello, I'm</p>
                 <h1 class="title">Francesca Venditti</h1>
-                <p class="section_text_p2">CS & Engineering Student @ MIT</p>
+                <p class="section_text_p2">Computer Science & Engineering Student @ MIT</p>
                 <div class="btn-container">
                     <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
                     <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
@@ -69,8 +69,8 @@
                     <div class="about-containers">
                         <div class="details-container">
                             <img src="./assets/experience.png" alt="experience icon" class="icon" />
-                            <h3>Experience</h3>
-                            <p>2+ years<br>Python</br></p>
+                            <h3>Most Recent Experience</h3>
+                            <p>Solutions Engineering @ Deloitte (summer 2024)</p>
                         </div>
                         <div class="details-container">
                             <img src="./assets/education.png" alt="education icon" class="icon" />
@@ -80,15 +80,17 @@
                         <div class="details-container">
                             <img src="./assets/languages.png" alt="languages icon" class="icon" />
                             <h3>Languages</h3>
-                            <p>English<br>Native</br></p>
-                            <p>Spanish<br>Proficient</br></p>
-                            <p>Mandarin Chinese<br>Beginner</br></p>
+                            <p>English (Native) </p>
+                            <p>Spanish (Proficient) </p>
+                            <p>Mandarin Chinese (Beginner) </p>
                         </div>
-
                     </div>
                     <div class="text-container">
                         <p>
-                            I'm a rising 3rd year student at MIT where I major in course 6-3 and minor in biology (course 7). I love to code and am passionate about using technology to solve real-world problems. I'm currently a 
+                            I'm a rising junior at MIT where I major in course 6-3 and minor in biology (course 7). 
+                            I love to code and am passionate about using technology to solve real-world problems. I'm currently a 
+                            Solutions Engineering intern at Deloitte where I am working on a FEMA Cloud/DHS AI client project. 
+                            My hobbies include reading, playing the piano, swimming, cafe-hopping, and grabbing boba with friends. Thank you for visiting my website!
                         </p>
                     </div>
                 </div>
@@ -166,6 +168,46 @@
                             </article>
                         </div>
                     </div>
+                    <div class="details-container">
+                        <h2 class="experience-subtitle">Other</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark icon" class="icon" />
+                                <div>
+                                    <h3>Python</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark icon" class="icon" />
+                                <div>
+                                    <h3>C</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark icon" class="icon" />
+                                <div>
+                                    <h3>Assembly</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark icon" class="icon" />
+                                <div>
+                                    <h3>zsh/bash</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark icon" class="icon" />
+                                <div>
+                                    <h3>Software Construction</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
                 </div>
             </div>
             <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
@@ -174,38 +216,38 @@
             <p class="section_text_p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
             <div class="experience-details-container">
-                <div class="about-containers"><div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/project1.png" alt="project 1" class="project-pic" id="project_1_pic"/>
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project1.png" alt="project 1" class="project-pic" id="project_1_pic"/>
+                        </div>
+                        <h2 class="experience-subtitle project-title">Project One</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
+                            <!-- put actual repo/link here!! -->   
+                        </div>
                     </div>
-                    <h2 class="experience-subtitle project-title">Project One</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                        <!-- put actual repo/link here!! -->   
-                    </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project2.png" alt="project 2" class="project-pic" id="project_2_pic"/>
+                        </div>
+                        <h2 class="experience-subtitle project-title">Project Two</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
+                            <!-- put actual repo/link here!! -->   
+                        </div>
 
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/project2.png" alt="project 2" class="project-pic" id="project_2_pic"/>
                     </div>
-                    <h2 class="experience-subtitle project-title">Project Two</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                        <!-- put actual repo/link here!! -->   
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project3.png" alt="project 3" class="project-pic" id="project_3_pic"/>
+                        </div>
+                        <h2 class="experience-subtitle project-title">Project Three</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
+                            <!-- put actual repo/link here!! -->   
+                        </div>
                     </div>
-
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/project3.png" alt="project 3" class="project-pic" id="project_3_pic"/>
-                    </div>
-                    <h2 class="experience-subtitle project-title">Project Three</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                        <!-- put actual repo/link here!! -->   
-                    </div>
-                </div>
             </div>
             <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
         </section>
