--- a/index.html
+++ b/index.html
@@ -221,32 +221,30 @@
                         <div class="article-container">
                             <img src="./assets/project1.png" alt="project 1" class="project-pic" id="project_1_pic"/>
                         </div>
-                        <h2 class="experience-subtitle project-title">Project One</h2>
-                        <div class="btn-container">
+                        <h2 class="experience-subtitle project-title">Star Battle Game</h2>
+                        <!-- <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                            <!-- put actual repo/link here!! -->   
-                        </div>
+                        </div> -->
                     </div>
                     <div class="details-container color-container">
                         <div class="article-container">
                             <img src="./assets/project2.png" alt="project 2" class="project-pic" id="project_2_pic"/>
                         </div>
-                        <h2 class="experience-subtitle project-title">Project Two</h2>
-                        <div class="btn-container">
+                        <h2 class="experience-subtitle project-title">Meme Generation Tool</h2>
+                        <!-- <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                            <!-- put actual repo/link here!! -->   
-                        </div>
+                        </div> -->
 
                     </div>
                     <div class="details-container color-container">
                         <div class="article-container">
                             <img src="./assets/project3.png" alt="project 3" class="project-pic" id="project_3_pic"/>
                         </div>
-                        <h2 class="experience-subtitle project-title">Project Three</h2>
-                        <div class="btn-container">
+                        <h2 class="experience-subtitle project-title">Memory Scramble Game</h2>
+                        <!-- <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                            <!-- put actual repo/link here!! -->   
-                        </div>
+                           
+                        </div> -->
                     </div>
             </div>
             <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
