--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
                         <div class="article-container">
                             <img src="./assets/project3.png" alt="project 3" class="project-pic" id="project_3_pic"/>
                         </div>
-                        <h2 class="experience-subtitle project-title">Memory Scramble Game</h2>
-                        <!-- <div class="btn-container">
-                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                           
-                        </div> -->
+                        <h2 class="experience-subtitle project-title">3D Engine</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/fnv234/3d-engine'">View Project</button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/y3xs6DGiKRw'">Live Demo</button>
+                        </div>
                     </div>
             </div>
             <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
