--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
                     <div class="details-container color-container">
                         <div class="article-container">
-                            <img src="./assets/project3.png" alt="project 3" class="project-pic" id="project_3_pic"/>
+                            <img src="./assets/tank.png" alt="project 3" class="project-pic" id="project_3_pic"/>
                         </div>
                         <h2 class="experience-subtitle project-title">3D Engine</h2>
                         <div class="btn-container">
