--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                             <img src="./assets/project2.png" alt="project 2" class="project-pic" id="project_2_pic"/>
                         </div>
                         <h2 class="experience-subtitle project-title">Meme Generation Tool</h2>
-                        <!-- <div class="btn-container">
-                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                        </div> -->
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/dqxMrUxufEk'">View Project</button>
+                        </div>
 
                     </div>
                     <div class="details-container color-container">
