--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                             <img src="./assets/project1.png" alt="project 1" class="project-pic" id="project_1_pic"/>
                         </div>
                         <h2 class="experience-subtitle project-title">Star Battle Game</h2>
-                        <!-- <div class="btn-container">
-                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">View Project</button>
-                        </div> -->
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/d-alVq1IBtI'">View Project</button>
+                        </div>
                     </div>
                     <div class="details-container color-container">
                         <div class="article-container">
