--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1 class="title">Francesca Venditti</h1>
                 <p class="section_text_p2">Computer Science & Engineering Student @ MIT</p>
                 <div class="btn-container">
-                    <button class="btn btn-color-2" onclick="window.open('./assets/resume4.pdf')">Download CV</button>
+                    <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
                     <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
                 </div>
                 <div id="socials-container">
