--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p>
                             I'm a rising junior at MIT where I major in course 6-3 and minor in biology (course 7). 
                             I love to code and am passionate about using technology to solve real-world problems. I'm currently a 
-                            Solutions Engineering intern at Deloitte where I am working on a FEMA Cloud/DHS AI client project. 
+                            Solutions Engineering intern at Deloitte for summer 2024 with the Discovery II program. 
                             My hobbies include reading, playing the piano, swimming, cafe-hopping, and grabbing boba with friends. Thank you for visiting my website!
                         </p>
                     </div>
