--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 <img src="./assets/checkmark.png" alt="checkmark icon" class="icon growing-animation" />
                                 <div>
                                     <h3>Node JS</h3>
-                                    <p>Basic</p>
+                                    <p>Intermediate</p>
                                 </div>
                             </article>
                             <article>
