--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="details-container">
                             <img src="./assets/experience.png" alt="experience icon" class="icon moving-picture-profile" />
                             <h3>Most Recent Experience</h3>
-                            <p>Solutions Engineering @ Deloitte (summer 2024)</p>
+                            <p>Cloud & AI SWE intern @ Deloitte (summer 2024)</p>
                         </div>
                         <div class="details-container">
                             <img src="./assets/education.png" alt="education icon" class="icon moving-picture-profile" />
@@ -91,8 +91,8 @@
                     <div class="text-container">
                         <p>
                             I'm a rising junior at MIT where I major in course 6-3 and minor in biology (course 7). 
-                            I love to code and am passionate about using technology to solve real-world problems. I'm currently a 
-                            Solutions Engineering intern at Deloitte for summer 2024 with the Discovery II program. 
+                            I love to code and am passionate about using technology to solve real-world problems. I was a 
+                            Cloud & AI SWE intern at Deloitte for summer 2024 with the Discovery II program. 
                             My hobbies include reading, playing the piano, swimming, cafe-hopping, and grabbing boba with friends. Thank you for visiting my website!
                         </p>
                     </div>
