--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="details-container">
                             <img src="./assets/experience.png" alt="experience icon" class="icon moving-picture-profile" />
                             <h3>Most Recent Experience</h3>
-                            <p>Cloud & AI SWE intern @ Deloitte (summer 2024)</p>
+                            <p>AI/Machine Learning & Software Engineering intern @ Nasdaq (winter 2025)</p>
                         </div>
                         <div class="details-container">
                             <img src="./assets/education.png" alt="education icon" class="icon moving-picture-profile" />
@@ -90,10 +90,10 @@
                     </div>
                     <div class="text-container">
                         <p>
-                            I'm a rising junior at MIT where I major in course 6-3 and minor in biology (course 7). 
-                            I love to code and am passionate about using technology to solve real-world problems. I was a 
-                            Cloud & AI SWE intern at Deloitte for summer 2024 with the Discovery II program. 
-                            My hobbies include reading, playing the piano, swimming, cafe-hopping, and grabbing boba with friends. Thank you for visiting my website!
+                            I am a junior at MIT where I major in Computer Science & Engineering (course 6-3) and minor in biology (course 7). 
+                            I love to code and am passionate about creatively and efficiently using technology to solve real-world challenges. This IAP, I worked with Nasdaq's new Machine Learning initiative
+                            on a settlement failure prediction project and participated in software engineering and finance workshops to enrich my understanding of quantitative finance which I greatly enjoyed.
+                            In my free time, I love reading, playing the piano, swimming, cafe-hopping, and grabbing boba with friends. Thank you for visiting my website!
                         </p>
                     </div>
                 </div>
@@ -186,6 +186,13 @@
                                 <div>
                                     <h3>Python</h3>
                                     <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark icon" class="icon growing-animation" />
+                                <div>
+                                    <h3>AWS/Cloud</h3>
+                                    <p>Intermediate</p>
                                 </div>
                             </article>
                             <article>
